--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,5 @@ dependencies {
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 
     implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
